# versed

./: COPYING  Cargo.toml  README.md  versed.sublime-syntax
.github/workflows/: ci.yml  release.yaml  test.yml
demos/VisitorDemo/: DebugWriterVisitor.cs  Program.cs  TrademarkerVisitor.cs  VisitorDemo.sln
demos/VisitorDemo/Types/: ContactsMetadata.cs  Types.cs  UserMetadata.cs  VersionedContactsMetadata.cs
demos/VisitorDemo/Visiting/: AdapterVisitor.cs  Getter.cs  IStructType.cs  IStructVisitor.cs  IType.cs  ITypeVisitor.cs  PrimitiveTypeMetadata.cs
docs/: README.md  development.md  example-schema.vs  language.md  project-spec.md  spec.md  usage.md
docs/examples/: basic.vd  upgrade.rs  versions.vd  visit.js
docs/project-spec/: Makefile
src/: ast.rs  error.rs  loading.rs  main.rs  metadata.rs  name_resolution.rs  reports.rs
src/codegen/: file_patching.rs  idents.rs  mod.rs  naming_pass.rs  source_writer.rs
src/migrations/: annotate.rs  mod.rs  pairing.rs
src/preprocessing/: annotation_check.rs  mod.rs  name_resolution.rs  recursion_check.rs
src/rust/: codegen.rs  idents.rs  migrations.rs  mod.rs  recursive.rs  types.rs
src/syntax/: lexer.rs  mod.rs  parser.rs  tokens.rs
src/typescript/: idents.rs  mod.rs  types.rs
tests/: annotate_and_check.rs  check.rs  migration_check.rs  rust_compile.rs  rust_integration.rs  rust_migration_compile.rs  rust_serde_compile.rs  rust_serde_postcard_roundtrip.rs  serde_roundtrip.rs  typescript_compile.rs  typescript_integration.rs
tests/utils/: mod.rs  roundtrip_schemas.inc.rs  rust_schemas.inc.rs  test_schemas.inc.rs
versed/: Cargo.toml
versed/src/: ast.rs  main.rs  metadata.rs  name_resolution.rs
versed/src/c_sharp/: mod.rs  naming.rs
versed/src/codegen/: idents.rs  mod.rs  naming.rs  source_writer.rs
versed/src/rust/: idents.rs  mod.rs  types.rs
versed/src/syntax/: lexer.rs  mod.rs  parser.rs
verserde/: Cargo.toml
verserde/src/: ast.rs  idents.rs  macro.rs  main.rs  metadata.rs  source_writer.rs
verserde/src/c_sharp/: generation.rs  ident.rs  idents.rs  mod.rs  naming.rs
verserde/src/codegen/: mod.rs
verserde/src/syntax/: lexer.rs  mod.rs  parser.rs  tokens.rs
