[package]
name = "versed"
version = "0.0.2"
edition = "2024"
license = "Apache-2.0"
description = "A tool for generating DTOs and their migrations from schema descriptions"
categories = ["command-line-utilities", "development-tools", "encoding"]
repository = "https://github.com/SvizelPritula/versed"

exclude = ["/docs/"]

[dependencies]
anstream = "0.6.20"
anstyle = "1.0.11"
ariadne = "0.5.1"
chumsky = "0.10.1"
clap = { version = "4.5.43", features = ["derive"] }
clap_complete = "4.5.57"
icu_normalizer = "2.0.0"
icu_properties = "2.0.1"
thiserror = "2.0.12"

[dev-dependencies]
indoc = "2.0.6"
tempfile = "3.21.0"
