[package]
name = "versed"
version = "0.0.3"
edition = "2024"
rust-version = "1.88"

license = "Apache-2.0"
description = "A tool for generating DTOs and their migrations from schema descriptions"
categories = ["command-line-utilities", "development-tools", "encoding"]
repository = "https://github.com/SvizelPritula/versed"

exclude = ["/docs/", "/.github/"]

[dependencies]
anstream = "0.6.20"
anstyle = "1.0.11"
ariadne = "0.5.1"
chumsky = { version = "0.11.1", features = ["either"] }
clap = { version = "4.5.47", features = ["derive", "wrap_help"] }
clap_complete = "4.5.57"
either = "1.15.0"
icu_normalizer = "2.0.0"
icu_properties = "2.0.1"
thiserror = "2.0.16"

[dev-dependencies]
indoc = "2.0.6"
tempfile = "3.21.0"

[profile.release]
lto = "fat"
strip = "symbols"
