[package]
name = "versed"
version = "0.0.4"
edition = "2024"
rust-version = "1.89"

license = "Apache-2.0"
description = "A tool for generating DTOs and their migrations from schema descriptions"
categories = ["command-line-utilities", "development-tools", "encoding"]
repository = "https://github.com/SvizelPritula/versed"
documentation = "https://github.com/SvizelPritula/versed/tree/main/docs"

exclude = ["/.github/", "/versed.sublime-syntax"]

[dependencies]
anstream = "1.0.0"
anstyle = "1.0.14"
ariadne = "0.6.0"
chumsky = { version = "0.13.0", features = ["either"] }
clap = { version = "4.6.1", features = ["derive", "wrap_help"] }
clap_complete = "4.6.7"
either = "1.16.0"
icu_normalizer = "2.2.0"
icu_properties = "2.2.0"
thiserror = "2.0.18"

[dev-dependencies]
indoc = "2.0.7"
tempfile = "3.27.0"

[profile.release]
lto = "fat"
strip = "symbols"
