[package]
name = "versed"
version = "0.0.1"
edition = "2024"
license = "Apache-2.0"
description = "A tool for generating DTO's and their migrations from schema descriptions"
categories = ["command-line-utilities", "development-tools", "encoding"]
repository = "https://github.com/SvizelPritula/versed"

exclude = ["src/c_sharp", "src/codegen"]

[dependencies]
anstream = "0.6.20"
anstyle = "1.0.11"
ariadne = "0.5.1"
chumsky = "0.10.1"
clap = { version = "4.5.43", features = ["derive"] }
icu_properties = "2.0.1"
thiserror = "2.0.12"
